--- a/disciplinas/programacao.html
+++ b/disciplinas/programacao.html
@@ -35,14 +35,14 @@
                 produtividade e a sustentabilidade das operações agrícolas. Aqui 
                 estão algumas das principais tecnologias que estão sendo 
                 implementadas no setor:
-                1. Agricultura de Precisão
-                2. Internet das Coisas (IoT)
-                3. Big Data e Análise de Dados
-                4. Biotecnologia
-                5. Máquinas e Equipamentos Avançados
-                6. Agricultura Vertical e Hidroponia
-                7. Blockchain e Rastreabilidade
-                
+                1. Agricultura de Precisão <br>
+                2. Internet das Coisas (IoT) <br>
+                3. Big Data e Análise de Dados <br>
+                4. Biotecnologia <br>
+                5. Máquinas e Equipamentos Avançados <br>
+                6. Agricultura Vertical e Hidroponia <br>
+                7. Blockchain e Rastreabilidade <br>
+
             </p>
         </section>
     </main>
