--- a/disciplinas/programacao.html
+++ b/disciplinas/programacao.html
@@ -35,12 +35,13 @@
                 produtividade e a sustentabilidade das operações agrícolas. Aqui 
                 estão algumas das principais tecnologias que estão sendo 
                 implementadas no setor:
+                <section class="Agricultura de Precisão">
                 1. Agricultura de Precisão <br>
                         * A agricultura de precisão envolve o uso de tecnologia para monitorar e gerenciar a variabilidade dos campos agrícolas de maneira precisa. Isso inclui: <br>
                         * GPS e Sensores: Para mapeamento e monitoramento de solos, colheitas e condições climáticas. <br>
                         * Drones: Utilizados para capturar imagens aéreas detalhadas, identificar pragas, doenças e variações de nutrientes. <br>
                         * Sensores de Solo: Medem a umidade, temperatura e composição do solo em tempo real. <br>
-
+                </section>
 
                 2. Internet das Coisas (IoT) <br>
                 3. Big Data e Análise de Dados <br>
