--- a/disciplinas/programacao.html
+++ b/disciplinas/programacao.html
@@ -37,7 +37,7 @@
                 implementadas no setor:
                 1. Agricultura de Precisão <br>
                 <section class="Agricultura de Precisão">
-                        ** A agricultura de precisão envolve o uso de tecnologia para monitorar e gerenciar a variabilidade dos campos agrícolas de maneira precisa. Isso inclui: <br>
+                        * A agricultura de precisão envolve o uso de tecnologia para monitorar e gerenciar a variabilidade dos campos agrícolas de maneira precisa. Isso inclui: <br>
                         * GPS e Sensores: Para mapeamento e monitoramento de solos, colheitas e condições climáticas. <br>
                         * Drones: Utilizados para capturar imagens aéreas detalhadas, identificar pragas, doenças e variações de nutrientes. <br>
                         * Sensores de Solo: Medem a umidade, temperatura e composição do solo em tempo real. <br>
