--- a/disciplinas/programacao.html
+++ b/disciplinas/programacao.html
@@ -36,14 +36,15 @@
                 estão algumas das principais tecnologias que estão sendo 
                 implementadas no setor:
                 1. Agricultura de Precisão <br>
-                <section class="Agricultura de Precisão">
                         * A agricultura de precisão envolve o uso de tecnologia para monitorar e gerenciar a variabilidade dos campos agrícolas de maneira precisa. Isso inclui: <br>
                         * GPS e Sensores: Para mapeamento e monitoramento de solos, colheitas e condições climáticas. <br>
                         * Drones: Utilizados para capturar imagens aéreas detalhadas, identificar pragas, doenças e variações de nutrientes. <br>
                         * Sensores de Solo: Medem a umidade, temperatura e composição do solo em tempo real. <br>
-                </section>
-
+        <br>
                 2. Internet das Coisas (IoT) <br>
+                        * Sistemas de irrigação automatizados: Que ajustam a quantidade de água com base nas necessidades das plantas e nas condições climáticas. <br>
+                        * Monitoramento de animais: Dispositivos vestíveis para monitorar a saúde e o comportamento do gado. <br>
+                        <br>
                 3. Big Data e Análise de Dados <br>
                 4. Biotecnologia <br>
                 5. Máquinas e Equipamentos Avançados <br>
