--- a/disciplinas/programacao.html
+++ b/disciplinas/programacao.html
@@ -44,12 +44,26 @@
                 2. Internet das Coisas (IoT) <br>
                         * Sistemas de irrigação automatizados: Que ajustam a quantidade de água com base nas necessidades das plantas e nas condições climáticas. <br>
                         * Monitoramento de animais: Dispositivos vestíveis para monitorar a saúde e o comportamento do gado. <br>
-                        <br>
+        <br>
+
                 3. Big Data e Análise de Dados <br>
+                        * Previsão de safra: Utilizando dados históricos e condições climáticas para prever rendimentos. <br>
+                        * Gestão de recursos: Otimização do uso de fertilizantes, pesticidas e água. <br>
+        <br>
                 4. Biotecnologia <br>
+                        * Edição de genes: Ferramentas como CRISPR estão sendo usadas para desenvolver variedades de plantas com características desejáveis. <br>
+        <br>
                 5. Máquinas e Equipamentos Avançados <br>
+                        * Tecnologia de precisão: Equipamentos que aplicam insumos de forma precisa, reduzindo desperdícios. <br>
+        <br>
                 6. Agricultura Vertical e Hidroponia <br>
+                        * Fazendas verticais: Estruturas que permitem o cultivo em múltiplos níveis, usando iluminação artificial e controle ambiental. <br>
+                        * Hidroponia e aquaponia: Cultivo de plantas sem solo, utilizando soluções nutritivas. <br>
+        <br>
                 7. Blockchain e Rastreabilidade <br>
+                        * Certificação de origem: Garantindo que os produtos sejam autênticos e cumpram com padrões de qualidade. <br>
+                        * Rastreabilidade: Monitorando o caminho dos produtos do campo até o consumidor final. <br>
+        
 
             </p>
         </section>
