--- a/disciplinas/robotica.html
+++ b/disciplinas/robotica.html
@@ -26,9 +26,31 @@
     </header>
     <main>
          <h1>
-            nfoiqfo8
+            Como a Robótica AJuda no Agronegócio
          </h1>
+         <p>
+            A robótica está transformando o agronegócio de várias 
+            maneiras, proporcionando eficiência e precisão. Aqui estão os
+            principais impactos resumidos em tópicos: <br>
+            1. Automatização de Tarefas <br>
+                * Plantio e Colheita: Máquinas robóticas podem plantar e colher culturas de forma autônoma. <br>
+                * Poda e Desbaste: Robôs realizam a poda de árvores e o desbaste de plantas de forma precisa. <br>
+        <br>
+            2. Monitoramento e Inspeção <br>
+                * Drones: Utilizados para inspecionar grandes áreas agrícolas, detectar pragas, doenças e avaliar a saúde das plantas. <br>
+                * Sensores e Câmeras: Em robôs terrestres para monitorar a condição do solo e das culturas. <br>
+        <br>
+            5. Aumento da Produtividade e Redução de Custos <br>
+                * Eficiência Operacional: Redução do tempo e mão-de-obra necessária para realizar tarefas agrícolas. <br>
+                * Economia de Recursos: Uso mais eficiente de água, fertilizantes e pesticidas. <br>
+        <br>
+            6. Melhoria na Sustentabilidade <br>
+                * Redução do Impacto Ambiental: Práticas mais precisas e controladas reduzem a pegada ecológica. <br>
+                * Conservação de Energia: Robôs operam com maior eficiência energética comparada a métodos tradicionais. <br>
+                
+         </p>
     </main>
+
     <footer>
         <p class="footer__text">Trabalho desenvolvido na disciplina de programação</p>
     </footer>
