--- a/disciplinas/robotica.html
+++ b/disciplinas/robotica.html
@@ -48,7 +48,11 @@
             4. Melhoria na Sustentabilidade <br>
                 * Redução do Impacto Ambiental: Práticas mais precisas e controladas reduzem a pegada ecológica. <br>
                 * Conservação de Energia: Robôs operam com maior eficiência energética comparada a métodos tradicionais. <br>
-
+        <br>
+            5. Inovação Contínua
+                * Desenvolvimento de Novas Tecnologias: Avanços constantes em IA e robótica aprimoram as capacidades dos robôs agrícolas. <br>
+                * Adaptação a Diferentes Culturas: Robôs estão sendo desenvolvidos para se adaptarem a diversos tipos de culturas e condições de cultivo. <br>
+                
          </p>
     </main>
 
