--- a/disciplinas/robotica.html
+++ b/disciplinas/robotica.html
@@ -49,10 +49,10 @@
                 * Redução do Impacto Ambiental: Práticas mais precisas e controladas reduzem a pegada ecológica. <br>
                 * Conservação de Energia: Robôs operam com maior eficiência energética comparada a métodos tradicionais. <br>
         <br>
-            5. Inovação Contínua
+            5. Inovação Contínua <br>
                 * Desenvolvimento de Novas Tecnologias: Avanços constantes em IA e robótica aprimoram as capacidades dos robôs agrícolas. <br>
                 * Adaptação a Diferentes Culturas: Robôs estão sendo desenvolvidos para se adaptarem a diversos tipos de culturas e condições de cultivo. <br>
-                
+
          </p>
     </main>
 
