--- a/disciplinas/programacao.html
+++ b/disciplinas/programacao.html
@@ -35,7 +35,7 @@
                 transformação do agronegócio, aumentando a eficiência, a 
                 produtividade e a sustentabilidade das operações agrícolas. Aqui 
                 estão algumas das principais tecnologias que estão sendo 
-                implementadas no setor:
+                implementadas no setor: <br>
                 1. Agricultura de Precisão <br>
                         * A agricultura de precisão envolve o uso de tecnologia para monitorar e gerenciar a variabilidade dos campos agrícolas de maneira precisa. Isso inclui: <br>
                         * GPS e Sensores: Para mapeamento e monitoramento de solos, colheitas e condições climáticas. <br>
