--- a/sobrenos.html
+++ b/sobrenos.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <h1 class="header__titulo">EQUIPE/05</h1>
+        <h1 class="header__titulo">Projeto Agrinho</h1>
         <div id="header__busca">
             <input id="header__barra" type="text" placeholder="Buscar..." />
             <a href="#" id="header__barra">
