--- a/disciplinas/robotica.html
+++ b/disciplinas/robotica.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/folhas de estilo/index.css">
+    <link rel="stylesheet" href="/folhas de estilo/index.css">
     <title>Projeto Agrinho</title>
 </head>
 
@@ -24,7 +25,7 @@
             <a class="header__link" href="/suporte.html">Suporte</a>
         </nav>
     </header>
-    <main>
+    <main class="robotica">
          <h1>
             Como a Robótica AJuda no Agronegócio
          </h1>
