--- a/disciplinas/robotica.html
+++ b/disciplinas/robotica.html
@@ -25,7 +25,7 @@
             <a class="header__link" href="/suporte.html">Suporte</a>
         </nav>
     </header>
-    <main class="robotica">
+    <section class="robotica">
          <h1>
             Como a Robótica AJuda no Agronegócio
          </h1>
@@ -55,7 +55,7 @@
                 * Adaptação a Diferentes Culturas: Robôs estão sendo desenvolvidos para se adaptarem a diversos tipos de culturas e condições de cultivo. <br>
 
          </p>
-    </main>
+    </section>
 
     <footer>
         <p class="footer__text">Trabalho desenvolvido na disciplina de programação</p>
