--- a/disciplinas/robotica.html
+++ b/disciplinas/robotica.html
@@ -25,7 +25,7 @@
             <a class="header__link" href="/suporte.html">Suporte</a>
         </nav>
     </header>
-    <h1>
+    <h1 class="h1">
         Como a Robótica AJuda no Agronegócio
      </h1> <br>
     <section class="robotica">
